[project]
name = "computational-aspects-of-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "open3d>=0.19.0",
    "torch>=2.9.0",
    "transforms3d>=0.4.2",
]
